# CommunityMatcher

./: .gitignore  CLAUDE.md  README.md  bulk_collect.py  demo_run.py  luma_bulk_collect.py  main.py  meetup_network.json  package-lock.json  pyproject.toml  rollup_communities.py  run_collection.py  web_main.py  webcollector.md
community_collector/: __init__.py  config.py  featherless_api.py  keywords.py  main.py  mcp_server.py  models.py  normalization.py  orchestrator.py  persistence.py  seed_keywords.py  tagging.py  translation.py
community_collector/adapters/: base.py  berlin_communities_adapter.py  eventbrite_adapter.py  github_adapter.py  ical_adapter.py  luma_adapter.py  meetup_adapter.py  mobilize_adapter.py
community_collector/utils/: date_utils.py  logging_utils.py  text_utils.py  url_utils.py
community_matcher/: app.py  web_app.py
community_matcher/agents/: __init__.py  archetype_agent.py  embedding_cache.py  event_discovery_agent.py  group_discovery_agent.py  llm_client.py  profile_builder_agent.py  question_planner_agent.py  ranking_agent.py  recommendation_writer_agent.py  risk_sanity_agent.py  search_planner_agent.py  semantic_search_tool.py  txt2sql_agent.py  vector_search_tool.py  vibe_classifier_agent.py
community_matcher/config/: settings.py
community_matcher/data/: interest_taxonomy.json
community_matcher/db/: connection.py  schema.sql  schema_doc.py  sessions.py
community_matcher/domain/: briefs.py  candidates.py  profile.py  scoring.py
community_matcher/static/: index.html
evals/: eval_e2e.py  eval_integration.py  eval_unit.py
(+25 files in other folders)
